EC2U / Improve inference reporting